# medallion-reference

./: .gitignore  .user.yml  COMPANY_PERSONA.md  DATA_SUMMARY.md  Justfile  README.md  SEMANTIC_LAYER_GUIDE.md  SNOWFLAKE_SETUP.md  config.falkordb.yml  config.kuzu.yml  config.webui.quickstart.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  sql_analyzer.duckdb
macros/: cross_db_utils.sql
models/marts/: README_NEW_MODELS.md
models/marts/customer_success/: fct_customer_health_score.sql  schema.yml
models/marts/finance/: dim_account.sql  fct_arr_reporting_monthly.sql  fct_pipeline.sql
models/marts/product/: dim_feature.sql  fct_product_usage_monthly.sql  schema.yml
models/marts/support/: fct_support_metrics_monthly.sql  schema.yml
models/semantic/: metrics.yml  semantic_models.yml
models/semantic_models/: metricflow.yml
models/semantic_views/: sv_arr_reporting.sql  sv_customer_health.sql  sv_feature_analytics.sql  sv_pipeline.sql  sv_product_adoption.sql  sv_support_experience.sql
models/staging/: schema.yml
reports/product_engagement_&_revenue_growth_analysis_20251017_051139/: report.html  report.md
seeds/: payment_methods.csv  product_catalog.csv  product_usage_events.csv  sfdc_account.csv  sfdc_opportunity.csv  sfdc_opportunitylineitem.csv  stripe_invoices.csv  stripe_subscriptions.csv  support_tickets.csv  user_licenses.csv
semantic_views/: sv_account_360.sql  sv_arr_reporting.sql  sv_customer_health.sql  sv_feature_analytics.sql  sv_pipeline.sql  sv_product_adoption.sql  sv_support_experience.sql
(+12 files in other folders)
